--- a/package.json
+++ b/package.json
@@ -10,9 +10,26 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-native-fontawesome": "^0.2.3",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.5.0",
+    "@react-navigation/native": "^5.1.6",
+    "@react-navigation/stack": "^5.2.13",
+    "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
-    "react-native-jitsi-meet": "^2.1.1"
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-jitsi-meet": "^2.1.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.7.0",
+    "react-native-share": "^3.3.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.3.8",
+    "react-navigation-drawer": "^2.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
