--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.8",
-    "react-navigation-drawer": "^2.4.12",
-    "toggle-switch-react-native": "^2.1.0"
+    "react-navigation-drawer": "^2.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
